--- a/client-side/src/pages/index.module.css
+++ b/client-side/src/pages/index.module.css
@@ -1,6 +1,6 @@
 /* Offer Banener Starts */
 
-.offer_banner{
+/* .offer_banner{
   @apply bg-[#128c7e] text-[#fff] text-[18px] text-center p-4 mt-[15px];
 }
 .offer {
@@ -16,7 +16,7 @@
   100% {
     transform: scale(1, 1);
   }
-}
+} */
 
 /* Offer Banener Ends */
 
@@ -32,6 +32,46 @@
 .profile_settings {
   @apply w-full h-14 sticky top-0 z-10 flex justify-between items-center bg-[#f0f2f5] p-3 border-r-[#d1d7db] border-solid border-[1px];
 }
+.more_options {
+  @apply size-8 cursor-pointer mt-[5px];
+}
+.main_div {
+  @apply absolute right-[5px] top-[55px] w-[250px] bg-white shadow-lg rounded-[6px] transition-all;
+}
+.inner_div li {
+  @apply text-[#111B12] p-[15px] text-[14px];
+}
+.inner_div li:hover {
+  @apply bg-[#f0f2f5];
+}
+.inner_div li:first-child {
+  @apply mt-[4px];
+}
+.inner_div li:last-child {
+  @apply pb-[15px];
+}
+
+.popup_overlay {
+  @apply fixed top-0 left-0 w-[27%] h-full bg-white z-50;
+}
+
+.popup_content {
+  @apply p-5 text-center text-[#111B12];
+}
+
+.popup_close {
+  @apply flex gap-5 text-[#111B12] pt-5 pl-5;
+}
+
+.popup_search {
+  @apply bg-[#f0f2f5] flex gap-6 items-center p-[6px] px-4 mt-[30px] rounded-[8px] w-[92%] ml-4 mb-6;
+}
+.popup_search input { 
+  @apply w-full bg-transparent outline-none border-none text-[#111B12];
+}
+
+
+
 .search {
   @apply bg-[#f0f2f5] flex gap-6 items-center p-[6px] px-4 mt-[6px] rounded-[8px] w-[92%] ml-4 mb-6;
 }
@@ -94,6 +134,9 @@ scrollbar-width: none;  /* Firefox */
 .file_link {
   @apply text-[#111b21];
 }
+.previewURL {
+  @apply underline text-[blue];
+}
 
 .preview_image {
   @apply pt-[10px];
@@ -136,12 +179,12 @@ scrollbar-width: none;  /* Firefox */
 
 /* Responsive Starts */
 @media only screen and (max-width: 480px) { 
-.offer {
+/* .offer {
   @apply animate-none;
 }
 .offer_banner{
   @apply hidden text-[14px] p-2 m-[10px];
-}
+} */
 .content {
   @apply max-w-[160px];
 }
@@ -150,6 +193,9 @@ scrollbar-width: none;  /* Firefox */
 }
 .message_container {
   @apply w-full;
+}
+.messages {
+  @apply max-w-[70%];
 }
 .back_arrow {
   @apply block;
