--- a/client-side/src/pages/index.module.css
+++ b/client-side/src/pages/index.module.css
@@ -1,3 +1,8 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+
+
 /* Offer Banener Starts */
 
 /* .offer_banner{
@@ -27,7 +32,8 @@
 
 /* Aside Chat Container Starts */
 .chat_container {
-  @apply w-[27%] h-[calc(100vh-0px)] bg-[#fff] overflow-auto;
+  @apply w-[27%] h-[calc(100vh-0px)] bg-[#fff] overflow-hidden;
+  scrollbar-width: none;
 }
 .profile_settings {
   @apply w-full h-14 sticky top-0 z-10 flex justify-between items-center bg-[#f0f2f5] p-3 border-r-[#d1d7db] border-solid border-[1px];
@@ -36,8 +42,12 @@
   @apply size-8 cursor-pointer mt-[5px];
 }
 .main_div {
-  @apply absolute right-[5px] top-[55px] w-[250px] bg-white shadow-lg rounded-[6px] transition-all;
+  @apply absolute ml-[100%] top-[55px] w-[250px] bg-white shadow-lg rounded-[6px] transition-all duration-[1s];
 }
+.show {
+  @apply ml-[36%];
+}
+
 .inner_div li {
   @apply text-[#111B12] p-[15px] text-[14px];
 }
@@ -52,7 +62,10 @@
 }
 
 .popup_overlay {
-  @apply fixed top-0 left-0 w-[27%] h-full bg-white z-50;
+  @apply fixed top-0 left-[-450px] w-[27%] h-full bg-white z-50 transition-all duration-[1s];
+}
+.popup_slide {
+  @apply left-0;
 }
 
 .popup_content {
@@ -70,7 +83,17 @@
   @apply w-full bg-transparent outline-none border-none text-[#111B12];
 }
 
+.chat_variety {
+  @apply flex gap-2 pb-3 ml-4;
+}
 
+.all, .unread, .groups {
+  @apply bg-[#f0f2f5] py-[6px] px-3 rounded-[42px] text-[#111B12] cursor-pointer text-[15px];
+}
+
+.search_filter {
+  @apply sticky top-[55px] bg-[#fff] p-1;
+}
 
 .search {
   @apply bg-[#f0f2f5] flex gap-6 items-center p-[6px] px-4 mt-[6px] rounded-[8px] w-[92%] ml-4 mb-6;
@@ -79,12 +102,29 @@
   @apply w-full bg-transparent outline-none border-none text-[#111B12];
 }
 
+.all_chats_container {
+  @apply divide-y divide-gray-400 overflow-auto h-[calc(100vh-180px)];
+  scrollbar-width: none;
+}
+
+.individual_chat {
+  @apply flex gap-3 items-center text-[#111B12] p-3 cursor-pointer;
+}
+.individual_chat:hover {
+  @apply bg-[#f0f2f5]
+}
+
+.time_slots {
+  @apply text-[12px] pl-[140px] mb-[20px];
+}
+
 /* Aside Chat Container Ends */
 
 /* Main Chat Container Starts */
 
 .message_container {
-  @apply w-[73%] h-[calc(100vh-80px)] overflow-auto;
+  @apply w-[73%] h-[calc(100vh-80px)] overflow-hidden;
+  scrollbar-width: none;
 }
 .profile_settings {
   @apply flex justify-between items-center;
@@ -113,7 +153,10 @@
 }
 
 .rightMain_div {
-  @apply absolute right-[5px] top-[55px] w-[250px] bg-white shadow-lg rounded-[6px] transition-all;
+  @apply absolute right-[-255px] top-[55px] w-[250px] bg-white shadow-lg rounded-[6px] transition-all duration-[1s];
+}
+.right_popup {
+  @apply right-[5px];
 }
 
 .rightInner_div li {
@@ -131,6 +174,10 @@
 
 .form_element {
   @apply w-full fixed bottom-0 bg-[#f0f2f5];
+}
+.chat_area {
+  @apply overflow-auto h-[calc(100vh-46px)] pt-[88px];
+  scrollbar-width: none;
 }
 
 .list_group {
@@ -188,7 +235,23 @@ scrollbar-width: none;  /* Firefox */
 .send_image {
 @apply w-[24px] h-[24px];
 }
+.suggestions:hover {
+  @apply bg-[#f1f1f1];
+}
 
+
+.preview_section {
+  @apply flex flex-col items-center justify-center relative left-[300px];
+}
+.preview_section img {
+  @apply w-[300px] h-[300px];
+}
+.preview_paragraph {
+  @apply text-[#54656f] text-[22px];
+}
+.security_msg {
+  @apply text-[12px] text-[#8696a0] mt-10;
+}
 /* Main Chat Container Ends */
 
 /* Main Container Ends */
@@ -216,6 +279,13 @@ scrollbar-width: none;  /* Firefox */
 }
 .back_arrow {
   @apply block;
+}
+
+.preview_section {
+  @apply static mt-[50px];
+}
+.preview_paragraph {
+  @apply text-center text-[18px];
 }
 }
 
