--- a/client-side/src/styles/globals.css
+++ b/client-side/src/styles/globals.css
@@ -15,3 +15,12 @@ pre {
    left: 0;
    bottom: 70px;
 } */
+ .p-splitter-gutter {
+  @apply bg-[#f9fafb] h-full;
+ }
+ .p-splitter-gutter-handle {
+  background-color: #e5e7eb;
+    height: 50px;
+    border: darkgrey solid 2px;
+    border-style: dotted;
+ }
