--- a/client-side/src/pages/broadcast/broadcast.module.css
+++ b/client-side/src/pages/broadcast/broadcast.module.css
@@ -1,14 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 .Broadcast_container {
-    font-family: "Poppins", sans-serif;
-    display: flex;
+  font-family: "Poppins", sans-serif;
+  display: flex;
 }
 .main_head {
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 30px;
-    color: #000;
-    padding: 20px;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 30px;
+  color: #000;
+  padding: 20px;
 }
